--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -12,17 +12,17 @@ jobs:
       - name: Checkout Source
         uses: actions/checkout@v4
       - name: Login to docker hub
-        run: docker login -u dchawanwit@gmail.com -p jeiy0917047814
+        run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_USERNAME }}
       - name: Build Docker Image
-        run: docker build -t chwanwitdeedam/reactjs-app .
+        run: docker build -t chawanwit007/reactjs-app .
       - name: Publish Image to docker hub
-        run: docker push chwanwitdeedam/reactjs-app:latest
+        run: docker push chawanwit007/reactjs-app:latest
 
   deploy:
     needs: build
     runs-on: self-hosted
     steps:
       - name: Pull image from docker hub
-        run: docker pull chwanwitdeedam/reactjs-app:latest
+        run: docker pull chawanwit007/reactjs-app:latest
       - name: Run Docker Container
         run: docker run -d -p 4000:4000 --name reactjs-app-container
