--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -12,7 +12,7 @@ jobs:
       - name: Checkout Source
         uses: actions/checkout@v4
       - name: Login to docker hub
-        run: docker login -u chawanwit007 -p jeiy0917047814
+        run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
       - name: Build Docker Image
         run: docker build -t chawanwit007/reactjs-app .
       - name: Publish Image to docker hub
@@ -24,5 +24,7 @@ jobs:
     steps:
       - name: Pull image from docker hub
         run: docker pull chawanwit007/reactjs-app:latest
+      - name: Delete old container
+        run: docker rm -f reactjs-app-container
       - name: Run Docker Container
-        run: docker run -d -p 4000:4000 --name reactjs-app-container
+        run: docker run -d -p 3000:80 --name reactjs-app-container chawanwit007/reactjs-app
