--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Login to docker hub
         run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
       - name: Build Docker Image
-        run: docker build -t chawanwit007/reactjs-app .
+        run: docker build -t chawanwit007/reactjs-app --build-arg VITE_API_BASE_URL='${{ secrets.VITE_API_BASE_URL }}' .
       - name: Publish Image to docker hub
         run: docker push chawanwit007/reactjs-app:latest
 
