--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -20,7 +20,7 @@ jobs:
 
   deploy:
     needs: build
-    runs-on: aws-demo-ec2
+    runs-on: self-hosted
     steps:
       - name: Pull image from docker hub
         run: docker pull chawanwit007/reactjs-app:latest
